fixed spacing on drop-down toggle menu, need to find other solution to aligning nav links to page text justification

--- a/scss/_overrides.scss
+++ b/scss/_overrides.scss
@@ -67,10 +67,4 @@ h2 {
 .top-bar ul li {
   border-bottom: 4px solid rgba(46, 240, 248, 0.11);
 }
-.top-bar-section ul:first-child {
-  margin: 0 0 0 4%;
-}
 
-.top-bar-section ul:last-child {
-  margin: 0 4% 0 0;
-}
